syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
package com.sergeyvolkodav.grpc.proto.feed;


message User {
    string email = 1;
}

message JwtAccessToken {
    string access_token = 1;
}

service AuthService {
    rpc signUp (User) returns (JwtAccessToken);
}
